test/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-dubbo-route
spec:
  hosts:
    - org.apache.dubbo.samples.basic.api.demoservice
  http:
    - name: "reviews-v2-routes"
      route:
        - destination:
            host: org.apache.dubbo.samples.basic.api.demoservice
            subset: v1
        #  weight: 90
        #- destination:
        #    host: org.apache.dubbo.samples.basic.api.demoservice
        #    subset: v2
        #  weight: 10
